################################################################################
#                             nxTools - Change Log                             #
################################################################################

nxTools v1.0.4 (not released):
  NEW: Extensions are now loaded using Tcl's package system.
  FIX: Properly quote string values in SQL statements.
  FIX: The "SITE PRE STATS" command was broken in v1.0.3.
  FIX: The release check for "SITE REQUEST" did not allow some valid names.

nxTools v1.0.3 (Apr 5, 2006):
  NEW: Display pre areas on multiple lines if necessary (word wrapping).
  NEW: SITE SEARCH, same as SITE DUPE but with simpler output.
  CHG: Updated nxHelper to v2.3.0, new global-interp key functions.
  FIX: Possible crashes using "SITE OPEN/CLOSE" due to ioFTPD's buggy
       global-interp "var get/set" command.
  FIX: The unnuke command failed when unnuking a directory without a nuke prefix.
  FIX: Update the nuke record for the new and old directory names if the rename fails.

nxTools v1.0.2 (Feb 23, 2006):
  NEW: Added text templates for SITE WHO, see the text/Who.* files.
  NEW: Option to set the default number of results for SITE DUPE/NEW/etc.
  CHG: Updated nxHelper to v2.2.5, initialisation speed improvements.
  FIX: ASCII typo in the default Requests.Header template.
  FIX: Inconsistencies in the time duration functions.

nxTools v1.0.1 (Oct 29, 2005):
  CHG: Display requests in ascending order, based on their ID.
  CHG: Moved configuration to the nxTools directory.
  CHG: Removed 'SITE INVITE' command.
  CHG: Removed an unneeded ORDER clause from the dupe database cleaner.
  FIX: The nuke tag should be removed on unnuke.
  FIX: Zero-padding the request ID caused Tcl to mistake it for an octal value.

nxTools v1.0.0 (Oct 12, 2005):
  NEW: SITE APPROVE BOT, for IRC approve support.
  NEW: SITE REQBOT, for IRC request support.
  CHG: Removed dZSbot support, only AlcoBot is supported now.